cmake_minimum_required(VERSION 3.10)
project(cpp_practice)

set(CMAKE_CXX_STANDARD 11)

#add_executable(cpp_practice function_overloading.cpp)
#add_executable(cpp_practice  friend_function.cpp)
add_executable(cpp_practice  casting_operator.cpp)
#add_executable(cpp_practice   class_template_operator_overloading.cpp )
#add_executable(cpp_practice  class_template.cpp)
#add_executable(cpp_practice linked_list_struct.cpp)
#add_executable(cpp_practice insertion_extraction_operator.cpp)
#add_executable(cpp_practice  pointers.cpp)
#add_executable(cpp_practice  function_template_overloading.cpp)
#add_executable(cpp_practice  Function_template.cpp)
#add_executable(cpp_practice  hybrid_inheritance.cpp )
#add_executable(cpp_practice Abstract_class.cpp)
#add_executable(cpp_practice  virtual_functions.cpp)
#add_executable(cpp_practice  base_class_pointer.cpp)
#add_executable(cpp_practice  method_overloading_overriding_hiding.cpp)
#add_executable(cpp_practice  this_pointer.cpp)
#add_executable(cpp_practice  object_pointer.cpp)
